deploy/k8s/kube-agent.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: kube-agent
  name: kube-agent
spec:
  selector:
    service: kube-agent
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: kube-agent
  name: kube-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      service: kube-agent
  template:
    metadata:
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "kube-agent" 
        dapr.io/grpc-port: "50001" # default
        dapr.io/log-level: "warn"
        dapr.io/enable-api-logging: "true"
      labels:
        service: kube-agent
    spec:
      containers:
      - name: kube-agent
        image: kube-agent
        imagePullPolicy: Never
        ports:
          - containerPort: 5000
        volumeMounts:
        - name: config-volume
          mountPath: /app/appsettings.json
          subPath: appsettings.json
      volumes:
      - name: config-volume
        configMap:
          name: kube-agent-config
      restartPolicy: Always

---
