deploy/k8s/mongodb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-state
  labels:
    app: mongodb-state
spec:
  ports:
    - name: mongidb
      port: 27017
      targetPort: 27017
  clusterIP: None # StatefulSet 的 Headless Service
  selector:
    app: mongodb-state

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb-state
spec:
  serviceName: mongodb-state
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-state
  template:
    metadata:
      labels:
        app: mongodb-state
    spec:
      containers:
        - name: mongodb
          image: bitnami/mongodb
          ports:
            - containerPort: 27017
      restartPolicy: Always
